force-app/main/default/objects/KYC_Required_Documents__c/KYC_Required_Documents__c.object-meta.xml
<CustomObject>
    <description>KYC Required Documents to capture the documents required for the KYC Review</description>
    <label>KYC Required Documents</label>
    <nameField>
        <displayFormat>KYC Document - {0000000}</displayFormat>
        <label>KYC Required Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Required Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>