force-app/main/default/objects/KYC_Required_Documents__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Document Comments</description>
    <inlineHelpText>Document Comments</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>