force-app/main/default/objects/KYC_Required_Documents__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Date of Documents Received</description>
    <inlineHelpText>Date of Documents Received</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>