force-app/main/default/objects/KYC_Required_Documents__c/fields/Document_Required__c.field-meta.xml
<CustomField>
    <fullName>Document_Required__c</fullName>
    <description>Documents Required for the KYC Review process</description>
    <inlineHelpText>Documents Required for the KYC Review process</inlineHelpText>
    <label>Document Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6 AML Questions</fullName>
            </value>
            <value>
                <fullName>AML Policy</fullName>
            </value>
            <value>
                <fullName>Annual Financial Statements</fullName>
            </value>
            <value>
                <fullName>Client Risk Committee Meeting Minutes</fullName>
            </value>
            <value>
                <fullName>Corresponding Bank Questions</fullName>
            </value>
            <value>
                <fullName>CRC Minutes</fullName>
            </value>
            <value>
                <fullName>CRC Template and Research</fullName>
            </value>
            <value>
                <fullName>Exemption 4B Certificate and Questionnaire</fullName>
            </value>
            <value>
                <fullName>FAIS Document</fullName>
            </value>
            <value>
                <fullName>Fatca letter</fullName>
            </value>
            <value>
                <fullName>High Risk Client Template</fullName>
            </value>
            <value>
                <fullName>High Risk email Approval</fullName>
            </value>
            <value>
                <fullName>HRC Approval</fullName>
            </value>
            <value>
                <fullName>ID / Passport</fullName>
            </value>
            <value>
                <fullName>Internal KYC Questions</fullName>
            </value>
            <value>
                <fullName>Joint Venture Agreement</fullName>
            </value>
            <value>
                <fullName>KYC Review Template</fullName>
            </value>
            <value>
                <fullName>Letter of Authority</fullName>
            </value>
            <value>
                <fullName>Liquidator Documents</fullName>
            </value>
            <value>
                <fullName>Liquidators Letter</fullName>
            </value>
            <value>
                <fullName>Name change certificate</fullName>
            </value>
            <value>
                <fullName>Proof of Registered address</fullName>
            </value>
            <value>
                <fullName>Proof of Trading address</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>Shareholders details</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Swift message</fullName>
            </value>
            <value>
                <fullName>Trust Deed</fullName>
            </value>
            <value>
                <fullName>UBO Details</fullName>
            </value>
            <value>
                <fullName>Ultimate Beneficial Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>