force-app/main/default/objects/KYC_Required_Documents__c/fields/Document_Stored__c.field-meta.xml
<CustomField>
    <fullName>Document_Stored__c</fullName>
    <description>Have the document been stored in FileNet</description>
    <inlineHelpText>Have the document been stored in FileNet</inlineHelpText>
    <label>Document Stored?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>