force-app/main/default/objects/KYC_Required_Documents__c/fields/KYC_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Review_Status__c</fullName>
    <description>KYC Required Documents to capture the documents required for the KYC Review</description>
    <label>KYC Review Status</label>
    <referenceTo>KYC_Status__c</referenceTo>
    <relationshipLabel>KYC Required Documents</relationshipLabel>
    <relationshipName>KYC_Required_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>