force-app/main/default/objects/KYC_Required_Documents__c/fields/Received_From__c.field-meta.xml
<CustomField>
    <fullName>Received_From__c</fullName>
    <description>Documents received from</description>
    <inlineHelpText>Documents received from</inlineHelpText>
    <label>Received From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Coordinator</fullName>
            </value>
            <value>
                <fullName>Client Team</fullName>
            </value>
            <value>
                <fullName>Client Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>