force-app/main/default/objects/KYC_Required_Documents__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the document</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Introductory Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>