force-app/main/default/objects/KYC_Required_Documents__c/validationRules/Date_Received_required_when_Status_is_re.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Received_required_when_Status_is_re</fullName>
    <active>true</active>
    <description>As per DEF-001210, we are mandating received date if the status is recieved</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c ,&quot;Received&quot;), ISBLANK( Date_Received__c ) )</errorConditionFormula>
    <errorDisplayField>Date_Received__c</errorDisplayField>
    <errorMessage>Please complete the date received</errorMessage>
</ValidationRule>